--- a/imperator-tiger.conf
+++ b/imperator-tiger.conf
@@ -34,29 +34,29 @@ filter = {
         # - text
         # - ignore_keys_in_files
         #severity = Error
+        key = missing-localization
         NOR = {
-            # key = structure
-            # key = brace-error
-            # key = validation
-            # key = strict-scopes
-            # key = brace-placement
-            # key = parse-error
-            # key = duplicate-item
-            # key = field-missing
-            # key = missing-item
-            # key = missing-file
-            # key = modifiers
-            # key = unknown-field
-            # key = duplicate-field
-            # key = missing-localization
-            # key = scopes
-
+            key = brace-error
+            key = structure
+            key = validation
+            key = strict-scopes
+            key = brace-placement
+            key = parse-error
+            key = duplicate-item
+            key = field-missing
+            key = missing-file
+            key = modifiers
+            key = duplicate-field
+            key = unknown-field
+            key = scopes
+            key = missing-item
             key = datafunctions
             key = localization
             key = rivers
             file = "events\test_events.txt"
             file = "events\000_johan_debug.txt"
             file = "gui\portrait_editor_window.gui"
+            file = "events\FMO_error_suppression.txt"
         }
     }
 
